fix(YALB-520): add padding to prevent icon bleed

--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_links/css/ys_links.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_links/css/ys_links.css
@@ -2,6 +2,8 @@
  * @file
  * Styles for ys_links
  */
+
 a.ys_linked {
   display: inline-block !important;
+  margin-right: 15px;
 }
